Practica 2/scanner.output
Terminales no usados en la gramática

   BI_SINOSI


La regla es inútil debido a los conflictos

   76 exp_b: operando


Estado 97 conflictos: 2 desplazamiento/reducción
Estado 98 conflictos: 1 desplazamiento/reducción, 24 reducción/reducción
Estado 128 conflictos: 6 reducción/reducción
Estado 135 conflictos: 1 desplazamiento/reducción
Estado 155 conflictos: 1 desplazamiento/reducción
Estado 164 conflictos: 3 desplazamiento/reducción
Estado 184 conflictos: 6 desplazamiento/reducción
Estado 190 conflictos: 6 reducción/reducción
Estado 191 conflictos: 6 reducción/reducción


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal BI_COMENTARIO

    3 bloque_alg: bloque BI_COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO BI_COMP_SEQ

   16 declaracion_cte: BI_CONST lista_d_cte BI_FCONST BI_COMP_SEQ

   17 declaracion_var: BI_VAR lista_d_var BI_FVAR BI_COMP_SEQ

   18 lista_d_tipo: BI_IDENTIFICADOR BI_CREACION_TIPO d_tipo BI_COMP_SEQ lista_d_tipo
   19             | %empty

   20 d_tipo: tipo_base
   21       | BI_IDENTIFICADOR
   22       | BI_REF d_tipo
   23       | expresion_t BI_SUBRANGO expresion_t
   24       | BI_TUPLA lista_campos BI_FTUPLA
   25       | BI_TABLA BI_INI_ARRAY expresion_t BI_SUBRANGO expresion_t BI_FIN_ARRAY BI_DE d_tipo

   26 expresion_t: expresion
   27            | BI_LIT_CARACTER

   28 lista_campos: BI_IDENTIFICADOR BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_campos
   29             | %empty

   30 tipo_base: BI_PR_ENTERO
   31          | BI_PR_REAL
   32          | BI_PR_BOOLEANO
   33          | BI_PR_CARACTER
   34          | BI_PR_CADENA

   35 literal: BI_LIT_ENTERO
   36        | BI_LIT_REAL
   37        | BI_LIT_BOOLEANO
   38        | BI_LIT_CARACTER
   39        | BI_LIT_CADENA

   40 lista_d_cte: BI_IDENTIFICADOR BI_CREACION_TIPO literal BI_COMP_SEQ lista_d_cte
   41            | %empty

   42 lista_d_var: lista_id BI_DEF_TYPEVAR BI_IDENTIFICADOR BI_COMP_SEQ lista_d_var
   43            | lista_id BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_d_var
   44            | %empty

   45 lista_id: BI_IDENTIFICADOR BI_SEPARADOR lista_id
   46         | BI_IDENTIFICADOR

   47 decl_ent_sal: decl_ent
   48             | decl_ent decl_sal
   49             | decl_sal

   50 decl_ent: BI_ENT lista_d_var

   51 decl_sal: BI_SAL lista_d_var

   52 expresion: exp_a
   53          | exp_b
   54          | funcion_ll

   55 literal_numerico: BI_LIT_ENTERO
   56                 | BI_LIT_REAL

   57 exp_a: exp_a BI_SUMA exp_a
   58      | exp_a BI_RESTA exp_a
   59      | exp_a BI_MULTIPLICACION
   60      | exp_a BI_DIVISION exp_a
   61      | exp_a BI_MOD exp_a
   62      | exp_a BI_DIV exp_a
   63      | BI_PAR_APER exp_a BI_PAR_CIER
   64      | operando
   65      | literal_numerico
   66      | BI_RESTA exp_a

   67 oprel: BI_IGUALDAD
   68      | BI_DISTINTO
   69      | BI_MAYOR
   70      | BI_MENOR
   71      | BI_MAYOR_IGUAL
   72      | BI_MENOR_IGUAL

   73 exp_b: exp_b BI_Y exp_b
   74      | exp_b BI_O exp_b
   75      | BI_NO exp_b
   76      | operando
   77      | BI_VERDADERO
   78      | BI_FALSO
   79      | expresion oprel expresion
   80      | BI_PAR_APER exp_b BI_PAR_CIER

   81 operando: BI_IDENTIFICADOR
   82         | operando BI_PUNTO operando
   83         | operando BI_INI_ARRAY expresion BI_FIN_ARRAY
   84         | operando BI_REF

   85 instrucciones: instruccion BI_COMP_SEQ instrucciones
   86              | instruccion

   87 instruccion: BI_CONTINUAR
   88            | asignacion
   89            | alternativa
   90            | iteracion
   91            | accion_ll

   92 asignacion: operando BI_ASIGNACION expresion

   93 alternativa: BI_SI expresion BI_ENTONCES instrucciones lista_opciones BI_FSI

   94 lista_opciones: BI_INI_ARRAY BI_FIN_ARRAY expresion BI_ENTONCES instrucciones lista_opciones
   95               | %empty

   96 iteracion: it_cota_fija
   97          | it_cota_exp

   98 it_cota_exp: BI_MIENTRAS expresion BI_HACER instrucciones BI_FMIENTRAS

   99 it_cota_fija: BI_PARA BI_IDENTIFICADOR BI_ASIGNACION expresion BI_HASTA expresion BI_HACER instrucciones BI_FPARA

  100 accion_d: BI_ACCION a_cabecera bloque BI_FACCION

  101 funcion_d: BI_FUNCION f_cabecera bloque BI_DEV expresion BI_FFUNCION

  102 a_cabecera: BI_IDENTIFICADOR BI_PAR_APER d_par_form

  103 f_cabecera: BI_IDENTIFICADOR BI_PAR_APER lista_d_var BI_PAR_CIER BI_COMP_SEQ

  104 d_par_form: d_p_form BI_COMP_SEQ d_par_form
  105           | %empty

  106 d_p_form: BI_ENT lista_id BI_DEF_TYPEVAR d_tipo
  107         | BI_SAL lista_id BI_DEF_TYPEVAR d_tipo
  108         | BI_E_S lista_id BI_DEF_TYPEVAR d_tipo

  109 accion_ll: BI_IDENTIFICADOR BI_PAR_APER l_ll BI_PAR_CIER

  110 funcion_ll: BI_IDENTIFICADOR BI_PAR_APER l_ll BI_PAR_CIER

  111 l_ll: expresion BI_SEPARADOR l_ll
  112     | expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
BI_COMENTARIO (258) 2 3
BI_LIT_ENTERO (259) 35 55
BI_LIT_REAL (260) 36 56
BI_LIT_BOOLEANO (261) 37
BI_LIT_CARACTER (262) 27 38
BI_LIT_CADENA (263) 39
BI_PR_ENTERO (264) 30
BI_PR_REAL (265) 31
BI_PR_BOOLEANO (266) 32
BI_PR_CARACTER (267) 33
BI_PR_CADENA (268) 34
BI_ACCION (269) 100
BI_FACCION (270) 100
BI_ALGORITMO (271) 1
BI_FALGORITMO (272) 1
BI_CONST (273) 16
BI_FCONST (274) 16
BI_FUNCION (275) 101
BI_FFUNCION (276) 101
BI_MIENTRAS (277) 98
BI_FMIENTRAS (278) 98
BI_PARA (279) 99
BI_FPARA (280) 99
BI_SI (281) 93
BI_FSI (282) 93
BI_TIPO (283) 15
BI_FTIPO (284) 15
BI_TUPLA (285) 24
BI_FTUPLA (286) 24
BI_VAR (287) 17
BI_FVAR (288) 17
BI_CONTINUAR (289) 87
BI_DE (290) 25
BI_DEV (291) 101
BI_DIV (292) 62
BI_ENT (293) 50 106
BI_E_S (294) 108
BI_FALSO (295) 78
BI_HACER (296) 98 99
BI_HASTA (297) 99
BI_REF (298) 22 84
BI_SAL (299) 51 107
BI_TABLA (300) 25
BI_VERDADERO (301) 77
BI_Y (302) 73
BI_O (303) 74
BI_NO (304) 75
BI_ASIGNACION (305) 92 99
BI_COMP_SEQ (306) 1 15 16 17 18 28 40 42 43 85 103 104
BI_SEPARADOR (307) 45 111
BI_SUBRANGO (308) 23 25
BI_DEF_TYPEVAR (309) 28 42 43 106 107 108
BI_ENTONCES (310) 93 94
BI_CREACION_TIPO (311) 18 40
BI_SINOSI (312)
BI_INI_ARRAY (313) 25 83 94
BI_FIN_ARRAY (314) 25 83 94
BI_IDENTIFICADOR (315) 1 18 21 28 40 42 45 46 81 99 102 103 109 110
BI_PUNTO (316) 82
BI_PAR_APER (317) 63 80 102 103 109 110
BI_PAR_CIER (318) 63 80 103 109 110
BI_SUMA (319) 57
BI_RESTA (320) 58 66
BI_MULTIPLICACION (321) 59
BI_DIVISION (322) 60
BI_MOD (323) 61
BI_MENOR (324) 70
BI_MAYOR (325) 69
BI_MENOR_IGUAL (326) 72
BI_MAYOR_IGUAL (327) 71
BI_IGUALDAD (328) 67
BI_DISTINTO (329) 68


No terminales con las reglas donde aparecen

$accept (75)
    en la izquierda: 0
desc_algoritmo (76)
    en la izquierda: 1, en la derecha: 0
cabecera_alg (77)
    en la izquierda: 2, en la derecha: 1
bloque_alg (78)
    en la izquierda: 3, en la derecha: 1
decl_globales (79)
    en la izquierda: 4 5 6, en la derecha: 2 4 5
decl_a_f (80)
    en la izquierda: 7 8 9, en la derecha: 2 7 8
bloque (81)
    en la izquierda: 10, en la derecha: 3 100 101
declaraciones (82)
    en la izquierda: 11 12 13 14, en la derecha: 10 11 12 13
declaracion_tipo (83)
    en la izquierda: 15, en la derecha: 4 11
declaracion_cte (84)
    en la izquierda: 16, en la derecha: 5 12
declaracion_var (85)
    en la izquierda: 17, en la derecha: 13
lista_d_tipo (86)
    en la izquierda: 18 19, en la derecha: 15 18
d_tipo (87)
    en la izquierda: 20 21 22 23 24 25, en la derecha: 18 22 25 28
    43 106 107 108
expresion_t (88)
    en la izquierda: 26 27, en la derecha: 23 25
lista_campos (89)
    en la izquierda: 28 29, en la derecha: 24 28
tipo_base (90)
    en la izquierda: 30 31 32 33 34, en la derecha: 20
literal (91)
    en la izquierda: 35 36 37 38 39, en la derecha: 40
lista_d_cte (92)
    en la izquierda: 40 41, en la derecha: 16 40
lista_d_var (93)
    en la izquierda: 42 43 44, en la derecha: 17 42 43 50 51 103
lista_id (94)
    en la izquierda: 45 46, en la derecha: 42 43 45 106 107 108
decl_ent_sal (95)
    en la izquierda: 47 48 49, en la derecha: 2
decl_ent (96)
    en la izquierda: 50, en la derecha: 47 48
decl_sal (97)
    en la izquierda: 51, en la derecha: 48 49
expresion (98)
    en la izquierda: 52 53 54, en la derecha: 26 79 83 92 93 94 98
    99 101 111 112
literal_numerico (99)
    en la izquierda: 55 56, en la derecha: 65
exp_a (100)
    en la izquierda: 57 58 59 60 61 62 63 64 65 66, en la derecha:
    52 57 58 59 60 61 62 63 66
oprel (101)
    en la izquierda: 67 68 69 70 71 72, en la derecha: 79
exp_b (102)
    en la izquierda: 73 74 75 76 77 78 79 80, en la derecha: 53 73
    74 75 80
operando (103)
    en la izquierda: 81 82 83 84, en la derecha: 64 76 82 83 84 92
instrucciones (104)
    en la izquierda: 85 86, en la derecha: 10 85 93 94 98 99
instruccion (105)
    en la izquierda: 87 88 89 90 91, en la derecha: 85 86
asignacion (106)
    en la izquierda: 92, en la derecha: 88
alternativa (107)
    en la izquierda: 93, en la derecha: 89
lista_opciones (108)
    en la izquierda: 94 95, en la derecha: 93 94
iteracion (109)
    en la izquierda: 96 97, en la derecha: 90
it_cota_exp (110)
    en la izquierda: 98, en la derecha: 97
it_cota_fija (111)
    en la izquierda: 99, en la derecha: 96
accion_d (112)
    en la izquierda: 100, en la derecha: 7
funcion_d (113)
    en la izquierda: 101, en la derecha: 8
a_cabecera (114)
    en la izquierda: 102, en la derecha: 100
f_cabecera (115)
    en la izquierda: 103, en la derecha: 101
d_par_form (116)
    en la izquierda: 104 105, en la derecha: 102 104
d_p_form (117)
    en la izquierda: 106 107 108, en la derecha: 104
accion_ll (118)
    en la izquierda: 109, en la derecha: 91
funcion_ll (119)
    en la izquierda: 110, en la derecha: 54
l_ll (120)
    en la izquierda: 111 112, en la derecha: 109 110 111


Estado 0

    0 $accept: . desc_algoritmo $end

    BI_ALGORITMO  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: BI_ALGORITMO . BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    BI_IDENTIFICADOR  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR . BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO

    BI_COMP_SEQ  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ . cabecera_alg bloque_alg BI_FALGORITMO

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg      ir al estado 8
    decl_globales     ir al estado 9
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 6

   16 declaracion_cte: BI_CONST . lista_d_cte BI_FCONST BI_COMP_SEQ

    BI_IDENTIFICADOR  desplazar e ir al estado 12

    $default  reduce usando la regla 41 (lista_d_cte)

    lista_d_cte  ir al estado 13


Estado 7

   15 declaracion_tipo: BI_TIPO . lista_d_tipo BI_FTIPO BI_COMP_SEQ

    BI_IDENTIFICADOR  desplazar e ir al estado 14

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 15


Estado 8

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg . bloque_alg BI_FALGORITMO

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg        ir al estado 17
    bloque            ir al estado 18
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal BI_COMENTARIO

    BI_ACCION   desplazar e ir al estado 23
    BI_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    4 decl_globales: declaracion_tipo . decl_globales

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 28
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 11

    5 decl_globales: declaracion_cte . decl_globales

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 29
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 12

   40 lista_d_cte: BI_IDENTIFICADOR . BI_CREACION_TIPO literal BI_COMP_SEQ lista_d_cte

    BI_CREACION_TIPO  desplazar e ir al estado 30


Estado 13

   16 declaracion_cte: BI_CONST lista_d_cte . BI_FCONST BI_COMP_SEQ

    BI_FCONST  desplazar e ir al estado 31


Estado 14

   18 lista_d_tipo: BI_IDENTIFICADOR . BI_CREACION_TIPO d_tipo BI_COMP_SEQ lista_d_tipo

    BI_CREACION_TIPO  desplazar e ir al estado 32


Estado 15

   15 declaracion_tipo: BI_TIPO lista_d_tipo . BI_FTIPO BI_COMP_SEQ

    BI_FTIPO  desplazar e ir al estado 33


Estado 16

   17 declaracion_var: BI_VAR . lista_d_var BI_FVAR BI_COMP_SEQ

    BI_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 44 (lista_d_var)

    lista_d_var  ir al estado 35
    lista_id     ir al estado 36


Estado 17

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg . BI_FALGORITMO

    BI_FALGORITMO  desplazar e ir al estado 37


Estado 18

    3 bloque_alg: bloque . BI_COMENTARIO

    BI_COMENTARIO  desplazar e ir al estado 38


Estado 19

   10 bloque: declaraciones . instrucciones

    BI_MIENTRAS       desplazar e ir al estado 39
    BI_PARA           desplazar e ir al estado 40
    BI_SI             desplazar e ir al estado 41
    BI_CONTINUAR      desplazar e ir al estado 42
    BI_IDENTIFICADOR  desplazar e ir al estado 43

    operando       ir al estado 44
    instrucciones  ir al estado 45
    instruccion    ir al estado 46
    asignacion     ir al estado 47
    alternativa    ir al estado 48
    iteracion      ir al estado 49
    it_cota_exp    ir al estado 50
    it_cota_fija   ir al estado 51
    accion_ll      ir al estado 52


Estado 20

   11 declaraciones: declaracion_tipo . declaraciones

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 53
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 21

   12 declaraciones: declaracion_cte . declaraciones

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 54
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 22

   13 declaraciones: declaracion_var . declaraciones

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 55
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 23

  100 accion_d: BI_ACCION . a_cabecera bloque BI_FACCION

    BI_IDENTIFICADOR  desplazar e ir al estado 56

    a_cabecera  ir al estado 57


Estado 24

  101 funcion_d: BI_FUNCION . f_cabecera bloque BI_DEV expresion BI_FFUNCION

    BI_IDENTIFICADOR  desplazar e ir al estado 58

    f_cabecera  ir al estado 59


Estado 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal BI_COMENTARIO

    BI_ENT  desplazar e ir al estado 60
    BI_SAL  desplazar e ir al estado 61

    decl_ent_sal  ir al estado 62
    decl_ent      ir al estado 63
    decl_sal      ir al estado 64


Estado 26

    7 decl_a_f: accion_d . decl_a_f

    BI_ACCION   desplazar e ir al estado 23
    BI_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 65
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    8 decl_a_f: funcion_d . decl_a_f

    BI_ACCION   desplazar e ir al estado 23
    BI_FUNCION  desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 66
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 4 (decl_globales)


Estado 29

    5 decl_globales: declaracion_cte decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 30

   40 lista_d_cte: BI_IDENTIFICADOR BI_CREACION_TIPO . literal BI_COMP_SEQ lista_d_cte

    BI_LIT_ENTERO    desplazar e ir al estado 67
    BI_LIT_REAL      desplazar e ir al estado 68
    BI_LIT_BOOLEANO  desplazar e ir al estado 69
    BI_LIT_CARACTER  desplazar e ir al estado 70
    BI_LIT_CADENA    desplazar e ir al estado 71

    literal  ir al estado 72


Estado 31

   16 declaracion_cte: BI_CONST lista_d_cte BI_FCONST . BI_COMP_SEQ

    BI_COMP_SEQ  desplazar e ir al estado 73


Estado 32

   18 lista_d_tipo: BI_IDENTIFICADOR BI_CREACION_TIPO . d_tipo BI_COMP_SEQ lista_d_tipo

    BI_LIT_ENTERO     desplazar e ir al estado 74
    BI_LIT_REAL       desplazar e ir al estado 75
    BI_LIT_CARACTER   desplazar e ir al estado 76
    BI_PR_ENTERO      desplazar e ir al estado 77
    BI_PR_REAL        desplazar e ir al estado 78
    BI_PR_BOOLEANO    desplazar e ir al estado 79
    BI_PR_CARACTER    desplazar e ir al estado 80
    BI_PR_CADENA      desplazar e ir al estado 81
    BI_TUPLA          desplazar e ir al estado 82
    BI_FALSO          desplazar e ir al estado 83
    BI_REF            desplazar e ir al estado 84
    BI_TABLA          desplazar e ir al estado 85
    BI_VERDADERO      desplazar e ir al estado 86
    BI_NO             desplazar e ir al estado 87
    BI_IDENTIFICADOR  desplazar e ir al estado 88
    BI_PAR_APER       desplazar e ir al estado 89
    BI_RESTA          desplazar e ir al estado 90

    d_tipo            ir al estado 91
    expresion_t       ir al estado 92
    tipo_base         ir al estado 93
    expresion         ir al estado 94
    literal_numerico  ir al estado 95
    exp_a             ir al estado 96
    exp_b             ir al estado 97
    operando          ir al estado 98
    funcion_ll        ir al estado 99


Estado 33

   15 declaracion_tipo: BI_TIPO lista_d_tipo BI_FTIPO . BI_COMP_SEQ

    BI_COMP_SEQ  desplazar e ir al estado 100


Estado 34

   45 lista_id: BI_IDENTIFICADOR . BI_SEPARADOR lista_id
   46         | BI_IDENTIFICADOR .

    BI_SEPARADOR  desplazar e ir al estado 101

    $default  reduce usando la regla 46 (lista_id)


Estado 35

   17 declaracion_var: BI_VAR lista_d_var . BI_FVAR BI_COMP_SEQ

    BI_FVAR  desplazar e ir al estado 102


Estado 36

   42 lista_d_var: lista_id . BI_DEF_TYPEVAR BI_IDENTIFICADOR BI_COMP_SEQ lista_d_var
   43            | lista_id . BI_DEF_TYPEVAR d_tipo BI_COMP_SEQ lista_d_var

    BI_DEF_TYPEVAR  desplazar e ir al estado 103


Estado 37

    1 desc_algoritmo: BI_ALGORITMO BI_IDENTIFICADOR BI_COMP_SEQ cabecera_alg bloque_alg BI_FALGORITMO .

    $default  reduce usando la regla 1 (desc_algoritmo)


Estado 38

    3 bloque_alg: bloque BI_COMENTARIO .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 39

   98 it_cota_exp: BI_MIENTRAS . expresion BI_HACER instrucciones BI_FMIENTRAS

    BI_LIT_ENTERO     desplazar e ir al estado 74
    BI_LIT_REAL       desplazar e ir al estado 75
    BI_FALSO          desplazar e ir al estado 83
    BI_VERDADERO      desplazar e ir al estado 86
    BI_NO             desplazar e ir al estado 87
    BI_IDENTIFICADOR  desplazar e ir al estado 104
    BI_PAR_APER       desplazar e ir al estado 89
    BI_RESTA          desplazar e ir al estado 90

    expresion         ir al estado 105
    literal_numerico  ir al estado 95
    exp_a             ir al estado 96
    exp_b             ir al estado 97
    operando          ir al estado 98
    funcion_ll        ir al estado 99


Estado 40

   99 it_cota_fija: BI_PARA . BI_IDENTIFICADOR BI_ASIGNACION expresion BI_HASTA expresion BI_HACER instrucciones BI_FPARA

    BI_IDENTIFICADOR  desplazar e ir al estado 106


Estado 41

   93 alternativa: BI_SI . expresion BI_ENTONCES instrucciones lista_opciones BI_FSI

    BI_LIT_ENTERO     desplazar e ir al estado 74
    BI_LIT_REAL       desplazar e ir al estado 75
    BI_FALSO          desplazar e ir al estado 83
    BI_VERDADERO      desplazar e ir al estado 86
    BI_NO             desplazar e ir al estado 87
    BI_IDENTIFICADOR  desplazar e ir al estado 104
    BI_PAR_APER       desplazar e ir al estado 89
    BI_RESTA          desplazar e ir al estado 90

    expresion         ir al estado 107
    literal_numerico  ir al estado 95
    exp_a             ir al estado 96
    exp_b             ir al estado 97
    operando          ir al estado 98
    funcion_ll        ir al estado 99


Estado 42

   87 instruccion: BI_CONTINUAR .

    $default  reduce usando la regla 87 (instruccion)


Estado 43

   81 operando: BI_IDENTIFICADOR .
  109 accion_ll: BI_IDENTIFICADOR . BI_PAR_APER l_ll BI_PAR_CIER

    BI_PAR_APER  desplazar e ir al estado 108

    $default  reduce usando la regla 81 (operando)


Estado 44

   82 operando: operando . BI_PUNTO operando
   83         | operando . BI_INI_ARRAY expresion BI_FIN_ARRAY
   84         | operando . BI_REF
   92 asignacion: operando . BI_ASIGNACION expresion

    BI_REF         desplazar e ir al estado 109
    BI_ASIGNACION  desplazar e ir al estado 110
    BI_INI_ARRAY   desplazar e ir al estado 111
    BI_PUNTO       desplazar e ir al estado 112


Estado 45

   10 bloque: declaraciones instrucciones .

    $default  reduce usando la regla 10 (bloque)


Estado 46

   85 instrucciones: instruccion . BI_COMP_SEQ instrucciones
   86              | instruccion .

    BI_COMP_SEQ  desplazar e ir al estado 113

    $default  reduce usando la regla 86 (instrucciones)


Estado 47

   88 instruccion: asignacion .

    $default  reduce usando la regla 88 (instruccion)


Estado 48

   89 instruccion: alternativa .

    $default  reduce usando la regla 89 (instruccion)


Estado 49

   90 instruccion: iteracion .

    $default  reduce usando la regla 90 (instruccion)


Estado 50

   97 iteracion: it_cota_exp .

    $default  reduce usando la regla 97 (iteracion)


Estado 51

   96 iteracion: it_cota_fija .

    $default  reduce usando la regla 96 (iteracion)


Estado 52

   91 instruccion: accion_ll .

    $default  reduce usando la regla 91 (instruccion)


Estado 53

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce usando la regla 11 (declaraciones)


Estado 54

   12 declaraciones: declaracion_cte declaraciones .

    $default  reduce usando la regla 12 (declaraciones)


Estado 55

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce usando la regla 13 (declaraciones)


Estado 56

  102 a_cabecera: BI_IDENTIFICADOR . BI_PAR_APER d_par_form

    BI_PAR_APER  desplazar e ir al estado 114


Estado 57

  100 accion_d: BI_ACCION a_cabecera . bloque BI_FACCION

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 115
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 58

  103 f_cabecera: BI_IDENTIFICADOR . BI_PAR_APER lista_d_var BI_PAR_CIER BI_COMP_SEQ

    BI_PAR_APER  desplazar e ir al estado 116


Estado 59

  101 funcion_d: BI_FUNCION f_cabecera . bloque BI_DEV expresion BI_FFUNCION

    BI_CONST  desplazar e ir al estado 6
    BI_TIPO   desplazar e ir al estado 7
    BI_VAR    desplazar e ir al estado 16

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 117
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 60

   50 decl_ent: BI_ENT . lista_d_var

    BI_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 44 (lista_d_var)

    lista_d_var  ir al estado 118
    lista_id     ir al estado 36


Estado 61

   51 decl_sal: BI_SAL . lista_d_var

    BI_IDENTIFICADOR  desplazar e ir al estado 34

    $default  reduce usando la regla 44 (lista_d_var)

    lista_d_var  ir al estado 119
    lista_id     ir al estado 36


Estado 62

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal . BI_COMENTARIO

    BI_COMENTARIO  desplazar e ir al estado 120


Estado 63

   47 decl_ent_sal: decl_ent .
   48             | decl_ent . decl_sal

    BI_SAL  desplazar e ir al estado 61

    $default  reduce usando la regla 47 (decl_ent_sal)

    decl_sal  ir al estado 121


Estado 64

   49 decl_ent_sal: decl_sal .

    $default  reduce usando la regla 49 (decl_ent_sal)


Estado 65

    7 decl_a_f: accion_d decl_a_f .

    $default  reduce usando la regla 7 (decl_a_f)


Estado 66

    8 decl_a_f: funcion_d decl_a_f .

    $default  reduce usando la regla 8 (decl_a_f)


Estado 67

   35 literal: BI_LIT_ENTERO .

    $default  reduce usando la regla 35 (literal)


Estado 68

   36 literal: BI_LIT_REAL .

    $default  reduce usando la regla 36 (literal)


Estado 69

   37 literal: BI_LIT_BOOLEANO .

    $default  reduce usando la regla 37 (literal)


Estado 70

   38 literal: BI_LIT_CARACTER .

    $default  reduce usando la regla 38 (literal)


Estado 71

   39 literal: BI_LIT_CADENA .

    $default  reduce usando la regla 39 (literal)


Estado 72

   40 lista_d_cte: BI_IDENTIFICADOR BI_CREACION_TIPO literal . BI_COMP_SEQ lista_d_cte

    BI_COMP_SEQ  desplazar e ir al estado 122


Estado 73

   16 declaracion_cte: BI_CONST lista_d_cte BI_FCONST BI_COMP_SEQ .

    $default  reduce usando la regla 16 (declaracion_cte)


Estado 74

   55 literal_numerico: BI_LIT_ENTERO .

    $default  reduce usando la regla 55 (literal_numerico)


Estado 75

   56 literal_numerico: BI_LIT_REAL .

    $default  reduce usando la regla 56 (literal_numerico)


Estado 76

   27 expresion_t: BI_LIT_CARACTER .

    $default  reduce usando la regla 27 (expresion_t)


Estado 77

   30 tipo_base: BI_PR_ENTERO .

    $default  reduce usando la regla 30 (tipo_base)


Estado 78

   31 tipo_base: BI_PR_REAL .

    $default  reduce usando la regla 31 (tipo_base)


Estado 79

   32 tipo_base: BI_PR_BOOLEANO .

    $default  reduce usando la regla 32 (tipo_base)


Estado 80

   33 tipo_base: BI_PR_CARACTER .

    $default  reduce usando la regla 33 (tipo_base)


Estado 81

   34 tipo_base: BI_PR_CADENA .

    $default  reduce usando la regla 34 (tipo_base)


Estado 82

   24 d_tipo: BI_TUPLA . lista_campos BI_FTUPLA

    BI_IDENTIFICADOR  desplazar e ir al estado 123

    $default  reduce usando la regla 29 (lista_campos)

    lista_campos  ir al estado 124


Estado 83

   78 exp_b: BI_FALSO .

    $default  reduce usando la regla 78 (exp_b)


Estado 84

   22 d_tipo: BI_REF . d_tipo
